fixed overlap css

--- a/public/css/main.scss
+++ b/public/css/main.scss
@@ -171,7 +171,7 @@ img{
 	text-decoration: none;
 	.mySlides {
 	height: 450px;
-	width: auto;
+	max-width: 550px;
 	margin-right: 0;
 	margin: 25px;
 	}
